--- a/src/assets/scss/helpers/_background.scss
+++ b/src/assets/scss/helpers/_background.scss
@@ -7,7 +7,7 @@
     width: 100%;
     height: 100vh;
     z-index: -1;
-    background: url(/images/bg.jpg) no-repeat center;
+    background: url(~@/assets/images/bg.jpg) no-repeat center;
     background-size: cover;
     opacity: 0.9;
 }
@@ -27,14 +27,14 @@
 }
 
 .bg-all{
-    background: url(/images/bg-all.png) no-repeat ;
+    background: url(~@/assets/images/bg-all.png) no-repeat ;
     background-size: cover;
     background-position: bottom;
 }
 .bg-login{
     background-repeat: no-repeat;
     background-position: center center;
-    background-image: url(/images/login-bg.jpeg);
+    background-image: url(~@/assets/images/login-bg.jpeg);
     background-size: cover;
     background-attachment: fixed;
 }
